# Alarmer

./: .coverage  .gitignore  ARCH.md  Budilnik.bat  README.md  SPEC.md  pyproject.toml  stderr.txt
Alarmer_v1/: Alarmer_v1.bat  Readme.txt  requirements.txt
Alarmer_v1/src/resources/styles/: theme.qss
Alarmer_v1/src/utils/: constants.py  storage.py
Alarmer_v1/src/views/: alarm_card_widget.py  alarm_form_dialog.py  alarm_popup.py  main_window.py  tray_manager.py
src/: app.py  main.py
src/controllers/: alarm_controller.py  tray_controller.py
src/models/: alarm_manager.py  alarm_model.py  sound_manager.py
src/utils/: constants.py  helpers.py
tests/: conftest.py  test_alarm_manager.py  test_alarm_model.py  test_helpers.py  test_sound_manager.py  test_storage.py
