[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "budilnik"
version = "1.0.0"
description = "Десктопное приложение-будильник для Windows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Budilnik Team" },
]
dependencies = [
    "PySide6>=6.5.0",
]

[project.urls]
Homepage = "https://github.com/budilnik/budilnik"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.qss", "*.svg", "*.png", "*.ico", "*.mp3", "*.wav"]

[project.scripts]
budilnik = "src.main:main"
